--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -7,9 +7,12 @@ on:
     tags:
     - v*
 
+  # Triggered by NodeODM build (after docker push)
+  workflow_dispatch:
+
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
     - name: Checkout
       uses: actions/checkout@v2
@@ -24,22 +27,11 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
-    - name: Docker meta
-      id: docker_meta
-      uses: crazy-max/ghaction-docker-meta@v1
-      with:
-        images: opendronemap/webodm_webapp
-        tag-semver: |
-          {{version}}
     - name: Build and push Docker image
       id: docker_build
       uses: docker/build-push-action@v2
       with:
         file: ./Dockerfile
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64
         push: true
-        tags: |
-          ${{ steps.docker_meta.outputs.tags }}
-          opendronemap/webodm_webapp:latest
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
+        tags: dronet/webodm_webapp:latest
