--- a/docker-compose.nodeodm.yml
+++ b/docker-compose.nodeodm.yml
@@ -10,7 +10,7 @@ services:
     environment:
       - WO_DEFAULT_NODES
   node-odm:
-    image: opendronemap/nodeodm
+    image: dronet/nodeodm
     ports:
       - "3000"
     restart: unless-stopped
