--- a/docker-compose.nodeodm.gpu.nvidia.yml
+++ b/docker-compose.nodeodm.gpu.nvidia.yml
@@ -22,3 +22,5 @@ services:
             - driver: nvidia
               count: 1
               capabilities: [gpu]
+    volumes:
+      - /Users/bugracoskun/desktop/dronet/DRONET-API/tmpWebodm:/var/www/data
