--- a/docker-compose.nodeodm.yml
+++ b/docker-compose.nodeodm.yml
@@ -15,3 +15,5 @@ services:
       - "3000"
     restart: unless-stopped
     oom_score_adj: 500
+    volumes:
+      - /Users/bugracoskun/desktop/dronet/DRONET-API/tmpWebodm:/var/www/data
